fix(test): use same test argLines in surefire and failsafe plugin
relates to #OPT-1554