@@ -18,6 +18,7 @@
     <env.LIMITS_CPU/>
 
     <skip.unit.tests>${skipTests}</skip.unit.tests>
+    <test.argLine>-Xmx1024m</test.argLine>
   </properties>
 
   <dependencyManagement>
@@ -402,7 +403,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <workingDirectory>${project.build.directory}</workingDirectory>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <argLine>${test.argLine}</argLine>
           <skipTests>${skip.unit.tests}</skipTests>
           <trimStackTrace>false</trimStackTrace>
           <forkCount>${env.LIMITS_CPU}</forkCount>
@@ -597,6 +598,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
+              <argLine>${test.argLine}</argLine>
               <excludedGroups>${it.test.excludedGroups}</excludedGroups>
               <redirectTestOutputToFile>true</redirectTestOutputToFile>
               <properties>
